--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
       </div>
       <div id="game" class="mt-5 mb-5">
         <h3 class="mb-4">Demo</h3>
-        <iframe src="game/index.html" frameborder="0"></iframe>
+        <iframe src="game.html" frameborder="0"></iframe>
       </div>
       <div id="download" class="mt-5 mb-5">
         <h3 class="mb-5">Probar juego completo</h3>
