--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
       <div id="game" class="mt-5 mb-5">
         <h3 class="mb-4">Demo</h3>
         <iframe
-          src="Game/game.html"
+          src="Game/index.html"
           frameborder="0"
         ></iframe>
       </div>
